language/move-lang/tests/move_check/parser/module_use_after_func.exp
error: 

   ┌── tests/move_check/parser/module_use_after_func.move:4:5 ───
   │
 4 │     use 0x1::X;
   │     ^^^ Unexpected 'use'
   ·
 4 │     use 0x1::X;
   │     --- Expected a name value
   │

